bebytes/tests/compile_time/unsupported_isize.stderr
error: Unsupported type for U8 attribute
  --> tests/compile_time/unsupported_isize.rs:12:13
   |
12 |     second: isize,
   |             ^^^^^
